manifests/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: staging
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghcr.io/haleema33/auth:staging-1.0.1
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 8084
  selector:
    app: auth
  type: ClusterIP
