manifests/billing-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
  namespace: staging
  labels:
    app: billing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: ghcr.io/haleema33/billing:staging-1.0.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: billing
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: billing
  type: ClusterIP
