manifests/sbom-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbom
  namespace: staging
  labels:
    app: sbom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sbom
  template:
    metadata:
      labels:
        app: sbom
    spec:
      containers:
        - name: sbom
          image: ghcr.io/haleema33/sbom:staging-1.0.1
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: sbom
  namespace: staging
spec:
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: sbom
  type: ClusterIP
